# fcn

./: Crop_Recommendation.pkl  README.md  crop_gcn_model.pth  crop_model.py  gcn.py  graphes.py  mew.py  pyproject.toml
